# ghcitty

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  flake.nix
demos/: auto-multiline-nav.tape  auto-reload.tape  bracketed-block-nav.tape  completions-multiline.tape  generate.sh  hoogle.tape  vi-mode.tape
src/: config.rs  error.rs  ghc.rs  highlight.rs  hoogle.rs  input.rs  json.rs  main.rs  parse.rs  pretty.rs  render.rs  session.rs  style.rs
tests/: integration.rs
