[package]
name = "ghcitty"
version = "0.1.0"
edition = "2021"
description = "Fast, friendly GHCi"

[[bin]]
name = "ghcitty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reedline = "0.47"
nu-ansi-term = "0.50"
libc = "0.2"

[dev-dependencies]
